review top-right icons alignment, fixes #286 (#288)

--- a/src/components/LanguageSelector/LanguageSelector.less
+++ b/src/components/LanguageSelector/LanguageSelector.less
@@ -13,18 +13,22 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
- 
+@import "../../views/resources/css/variables.less";
+
 .wrap {
   .top_window {
     .controller {
       .app_controller {
         margin-right: 60px;
         .switch_language {
+          padding-top: 0.01rem;
+          font-size: @smallerFont;
+          font-weight: 400;
           width: 100px;
           -webkit-app-region: no-drag;
           position: relative;
           height: 0.6rem;
-          
+
           .ivu-select-placeholder {
             position: relative;
           }
