--- a/src/components/WalletSelectorField/WalletSelectorField.less
+++ b/src/components/WalletSelectorField/WalletSelectorField.less
@@ -13,6 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+@import "../../views/resources/css/variables.less";
 
 .mac.wrap {
   .top_window {
@@ -24,12 +25,12 @@
           display: flex;
           flex-direction: row;
           justify-content: space-between;
-          margin-top: 13px;
+          margin-top: 0.16rem;
           .select_wallet_icon {
             width: 22px;
             height: 22px;
             position: relative;
-            top: 5px;
+            top: 0.04rem;
             filter: brightness(100);
           }
           .ivu-select {
@@ -42,8 +43,9 @@
           box-shadow: none;
           .ivu-select-placeholder,
           .ivu-select-selected-value {
+            font-size: @smallerFont;
+            font-weight: 400;
             color: white !important;
-            font-size: 20px;
             margin-left: 0;
           }
           i::before {
