--- a/src/views/layout/PageLayout/PageLayout.common.less
+++ b/src/views/layout/PageLayout/PageLayout.common.less
@@ -199,6 +199,8 @@
 
           .point {
             vertical-align: middle;
+            margin-right: 0.08rem;
+            margin-left: 0;
           }
 
           .network_type_text {
@@ -216,6 +218,7 @@
       }
 
       .debug-console-trigger {
+        padding-top: 0.01rem;
         font-size: @smallerFont;
         color: @white;
         cursor: pointer;
